src/test/ui/error-codes/E0608.stderr
error[E0608]: cannot index into a value of type `u8`
  --> $DIR/E0608.rs:12:5
   |
12 |     0u8[2]; //~ ERROR E0608
   |     ^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0608"
